add better winners display

--- a/Selecteur/css/style.css
+++ b/Selecteur/css/style.css
@@ -4,11 +4,49 @@ html, body {
 }
 
 .main {
-  height: 70%;
+  height: 20%;
   width: 100%;
   display: table;
   margin-left: 50px;
   padding: 0px 10px;
+}
+
+ul {
+  display: inline-block;
+  background-color: #fefefe;
+  margin: 20px;
+  height: 100%;
+  width: 30%;
+  overflow-y: scroll;
+  padding: 0;
+  font-size: 1em;
+  font-family: Arial, sans-serif;
+}
+
+li {
+  padding: 10px 20px;
+  font-size: 130%;
+  border-bottom-width: 100%;
+  border-bottom: 1px solid #ccc;
+}
+li:last-child {
+  border-bottom: none;
+}
+li:nth-child(even) {
+  background: #f8f8f8;
+}
+
+.table {
+  position: relative;
+  left: 53%;
+  top: 50%;
+  text-align: center;
+  width: 546px;
+  height: 265px;
+  margin-left: -273px;
+}
+.table h3 {
+  display: inline-block;
 }
 
 header {
